# Flask4Fun

./: README.md  build.sh  pyproject.toml  requirements.txt
flask4fun/: __init__.py
flask4fun/modules/pokeapi/: __init__.py  models.py
flask4fun/templates/: base.html  error.html
flask4fun/templates/pokemon/: search.html
flaskr/: __init__.py
